<resources>
    <string name="app_name">roosterbUs</string>
    <string name="facebook_app_id">220623802057538</string>
    <string name="fb_login_protocol_scheme">fb220623802057538</string>

    <!--Navigation Drawer strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Login Activity strings-->
    <string name="title_activity_login">roosterbUs</string>
    <string name="login_logo_description">Logo de roosterbUs</string>
    <string name="login_etx_username_hint">Nombre de usuario</string>
    <string name="login_etx_password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_txt_alternatives">O ingresar con: </string>
    <string name="login_button_create_account">Crear cuenta</string>
    <string name="login_copyrights">roosterbUs \u00A9 2018 \n Todos los derechos reservados</string>
    <string name="title_activity_account">Cuenta</string>

    <string-array name="modalidades">
        <item>Semestre</item>
        <item>Cuatrimestres</item>
    </string-array>
    <string name="title_activity_register">Registrarse</string>
    <string name="title_activity_schedule">Horario</string>
    <string name="title_activity_rate">Tarifas</string>
    <string name="title_activity_add_courses">Agregar cursos al periodo</string>
    <string name="title_activity_bus_routes">Rutas de bus del período</string>
</resources>
